# asiatica-va

./: .clangd  .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
.cache/clangd/index/: MainWindow.cpp.53BFD27863DE7652.idx  MainWindow.cpp.DF4CA125A6EC44C2.idx  MainWindow.h.2DD8947358BB7F13.idx  MainWindow.h.F1DD6AD285B6058A.idx  StyleProps.h.9345646AF0124CCD.idx  TimelineBar.cpp.2A176C9F3F654CFD.idx  TimelineBar.cpp.AA3A2FB0371F4AF4.idx  TimelineBar.h.0F5525E9B63C95D8.idx  TimelineBar.h.A1790D0FD186B382.idx  VideoControlsBar.cpp.3440265995E3F54F.idx  VideoControlsBar.cpp.B31AFD0F29E1CBB0.idx  VideoControlsBar.h.74EB56AFDACD9E9B.idx  VideoControlsBar.h.E7F494E4937C0215.idx  WelcomeWindow.cpp.2AA4FAB6413EC9AB.idx  WelcomeWindow.cpp.B03C49E7B8ADBBAE.idx  WelcomeWindow.h.35B8B461E68CA31D.idx  WelcomeWindow.h.8A1033D00B6B6417.idx  WorkWindow.cpp.C6101D62A895A9E8.idx  WorkWindow.cpp.DA2D1488438CD2AF.idx  WorkWindow.h.3FC4EA8876B50739.idx  WorkWindow.h.6FF894AC98BA9EDE.idx  (+15 more)
AVA_V01_cpp/: CMakeLists.txt  README.md  main.cpp
AVA_V01_cpp/components/: GameControls.cpp  GameControls.h  Scoreboard.cpp  Scoreboard.h  TimelineBar.cpp  TimelineBar.h  VideoControlsBar.cpp  VideoControlsBar.h  VideoPlayer.cpp  VideoPlayer.h
AVA_V01_cpp/export/: ClipExporter.cpp  ClipExporter.h  ClipTrimBar.cpp  ClipTrimBar.h  ExportDialog.cpp  ExportDialog.h  VideoConcatenator.cpp  VideoConcatenator.h  XmlExporter.cpp  XmlExporter.h
AVA_V01_cpp/i18n/: AppLocale.cpp  AppLocale.h  LocaleNotifier.cpp  LocaleNotifier.h
AVA_V01_cpp/macos/: PlaybackActivity.h  PlaybackActivity.mm
AVA_V01_cpp/state/: EventDefaults.cpp  EventDefaults.h  TagSession.cpp  TagSession.h
AVA_V01_cpp/style/: theme.cpp  theme_light.qss
AVA_V01_cpp/ui/: GameSetupWindow.cpp  GameSetupWindow.h  MainWindow.cpp  MainWindow.h  StatsWindow.cpp  StatsWindow.h  WelcomeWindow.cpp  WelcomeWindow.h  WorkWindow.cpp  WorkWindow.h
AVA_V02_py/: PARITY_CHECKLIST.md  confetti.py  learn.py  main.py  main.qss  qt_compat.py  resources.qrc  resources_rc.py  smoke_test.py  styles.py
AVA_V02_py/components/: game_controls.py  timeline_bar.py  video_controls_bar.py  video_player.py
AVA_V02_py/legacy/: learn.py
AVA_V02_py/state/: tag_session.py
AVA_V02_py/ui/: clip_popup_window.py  game_setup_window.py  main_window.py  stats_window.py  welcome_window.py  work_window.py
components/: GameControls.cpp  GameControls.h  VideoControlsBar.cpp  VideoPlayer.cpp  VideoPlayer.h
scripts/: make_icns.sh
state/: TagSession.cpp  TagSession.h
style/: Effects.h  StyleProps.h  theme.cpp  theme.h  theme_light.qss
ui/: MainWindow.cpp  MainWindow.h  StatsWindow.cpp  StatsWindow.h  WelcomeWindow.cpp  WelcomeWindow.h  WorkWindow.cpp  WorkWindow.h
